--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ color: #ffffff !important;
 
 }
 .img{
-    padding-top: 7em !important;
-    padding-left: 5em !important;
+    padding-top: 16em !important;
+    padding-right: 5em !important;
     padding-bottom: 5em !important;
     width: 120%;
 }
