Chedrick - Under construction Page

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     background-position: center, right bottom;
     background-repeat: no-repeat, no-repeat; */
 
-   background-color: #2F2F2F !important;
+   background-color: #ffffff !important;
 }
 
 .text3{
@@ -16,7 +16,7 @@ font-size: 51px;
 
 text-transform: uppercase;
 
-color: #FFFFFF;
+color: #2F2F2F;
 padding-top: 5em !important;
 }
 .text2{
@@ -25,11 +25,11 @@ font-style: normal;
 font-weight: 700;
 font-size: 20px;
 line-height: 26px;
-color: #FFFFFF;
+color: #2F2F2F;
 padding-top: .5em;
 }
 .rectangle{
-    background-color: #C4C4C4;
+    background-color: #2F2F2F;
     width: 400px;
     height: 4px;
 }
@@ -57,14 +57,14 @@ color: #ffffff !important;
 
 }
 .row{
-    padding-top: 10em !important;
+    padding-top: 8em !important;
     padding-left: 3em !important;
 }
 .img{
     padding-top: 16em !important;
     padding-right: 5em !important;
     padding-bottom: 5em !important;
-    width: 120%;
+   
 }
 @media only screen and (max-width: 1200px) and (min-width: 200px) {
     .row{
