--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body{
 
-    /* background-image: linear-gradient(to right, rgba(59, 59, 59, 0.6), rgba(182, 188, 194, 0.6)), url('/img/Frame.png');
-    background-size: cover, contain;
-    background-position: center, right bottom;
-    background-repeat: no-repeat, no-repeat; */
+    background-image: url('img/landingpage.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat, no-repeat; 
 
-   background-color: #ffffff !important;
+   /* background-color: #ffffff !important; */
 }
 
 .text3{
@@ -16,7 +16,7 @@ font-size: 51px;
 
 text-transform: uppercase;
 
-color: #2F2F2F;
+color: #ffffff;
 padding-top: 5em !important;
 }
 .text2{
@@ -25,11 +25,11 @@ font-style: normal;
 font-weight: 700;
 font-size: 20px;
 line-height: 26px;
-color: #2F2F2F;
+color: #ffffff;
 padding-top: .5em;
 }
 .rectangle{
-    background-color: #2F2F2F;
+    background-color: #ffffff;
     width: 400px;
     height: 4px;
 }
@@ -42,7 +42,7 @@ padding-top: .5em;
 background: linear-gradient(44.73deg, #7c7c7c 11.32%, #4e4e4e 92.96%);
 box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 40px;
-width: 165px;
+width: 300px;
 height: 50px;
 font-family: "Rajdhani", sans-serif;
 font-style: normal;
@@ -109,4 +109,11 @@ color: #ffffff !important;
 
 @media only screen and (max-width: 425px){
    
+}
+
+.img-under{
+    width: 10% !important;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
