changed color to yellow, change title

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ body {
   font-style: normal;
   font-weight: 700;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #c6ee12;
   margin-bottom: 3rem;
 }
 
