--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,6 @@ body {
   width: 400px;
   height: 4px;
 }
-
-.container-fluid {
-  padding-left: 10em !important;
-  padding-top: 5em !important;
-}
 .footbar-button-home1 {
   background: linear-gradient(44.73deg, #7c7c7c 11.32%, #4e4e4e 92.96%);
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -149,4 +144,23 @@ body {
 .flink-icon {
   color: dark;
   text-decoration: none;
+}
+
+@media (min-width: 310px) {
+  .countdown{
+    transform: none;
+  }
+  .content {
+    margin-bottom: 0;
+  }
+  
+}
+ 
+@media (min-width: 768px) {
+  .countdown{
+    transform: scale(2);
+  }
+  .content {
+    margin-bottom: 3rem;
+  }
 }
